--- a/backup.html
+++ b/backup.html
@@ -351,5 +351,9 @@ function setProgress(percent, text, isError = false) {
 function resetProgress() { setProgress(0, ""); }
 </script>
 
+  
+<!-- Logoff após inatividade -->
+<script type="module" src="js/session-timeout.js"></script>
+
 </body>
 </html>
