--- a/ficha.html
+++ b/ficha.html
@@ -621,5 +621,10 @@ function formatDateForPDF(dateString) {
 
   <!-- Script do Bootstrap (último elemento) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+
+<!-- Logoff após inatividade -->
+<script type="module" src="js/session-timeout.js"></script>
+
 </body>
 </html>
