--- a/presenca/frequencia.html
+++ b/presenca/frequencia.html
@@ -461,5 +461,12 @@
       }, 5000);
     }
   </script>
+
+
+
+<!-- Logoff após inatividade -->
+<script type="module" src="../js/session-timeout.js"></script>
+
+
 </body>
 </html>
