--- a/presenca/lista_culto.html
+++ b/presenca/lista_culto.html
@@ -563,5 +563,11 @@ function continuarGeracaoPDF(doc, yPos, cultoDate, presentesData) {
       }, 5000);
     }
   </script>
+
+<!-- Logoff após inatividade -->
+<script type="module" src="../js/session-timeout.js"></script>
+
+
+
 </body>
 </html>
