--- a/relogio/admin.html
+++ b/relogio/admin.html
@@ -488,6 +488,9 @@
   });
 </script>
 
+<!-- Logoff após inatividade -->
+<script type="module" src="../js/session-timeout.js"></script>
+
 
     
 </body>
