--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@ body {
                 <span>Presença Cultos</span>
             </a>
 
+            <a href="exportar.html" class="nav-item admin-only" style="display: none;">
+                <i class="fas fa-file-export"></i>
+                <span>Exportar/Importar Dados</span>
+            </a>
+
             <a href="backup.html" class="nav-item admin-only" style="display: none;">
                 <i class="fas fa-database"></i>
                 <span>Backup e Restauração</span>
