--- a/exportar.html
+++ b/exportar.html
@@ -254,7 +254,7 @@ body.autorizado .conteudo-restrito {
 <script type="module">
 import { db } from './firebase-config.js';
 import { ref, get, set, update } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
-import { saveAs } from 'https://esm.sh/file-saver@2.0.5';
+import { saveAs } from 'https://cdn.jsdelivr.net/npm/file-saver@3.0.0/+esm';
 import { read, utils, writeFile } from 'https://cdn.sheetjs.com/xlsx-0.19.3/package/xlsx.mjs';
 
 // Elementos da interface
