--- a/exportar.html
+++ b/exportar.html
@@ -55,7 +55,6 @@ body.autorizado .conteudo-restrito {
   background-color: #f8f9fa;
 }
 
-/* Estilo para tabela de pré-visualização */
 #preview-table {
   margin-top: 20px;
   display: none;
@@ -73,7 +72,12 @@ body.autorizado .conteudo-restrito {
 </head>
 <body>
 
-<!-- Mensagem de não autorizado -->
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="#">Administração de Dados</a>
+  </div>
+</nav>
+
 <div id="nao-autorizado">
   <div class="alert alert-danger text-center">
     <h4><i class="fas fa-exclamation-triangle me-2"></i>Acesso Restrito</h4>
@@ -84,8 +88,45 @@ body.autorizado .conteudo-restrito {
   </div>
 </div>
 
-<!-- FileSaver incluído corretamente -->
+<div class="container conteudo-restrito mt-4">
+  <h1>Administração de Dados</h1>
+
+  <div class="mb-3">
+    <label for="formato-exportacao" class="form-label">Formato de exportação:</label>
+    <select id="formato-exportacao" class="form-select">
+      <option value="csv">CSV</option>
+      <option value="json">JSON</option>
+      <option value="excel">Excel (XLSX)</option>
+    </select>
+  </div>
+
+  <button id="btnExportar" class="btn btn-success mb-3">Exportar</button>
+
+  <div class="mb-3">
+    <label for="formato-importacao" class="form-label">Formato de importação:</label>
+    <select id="formato-importacao" class="form-select">
+      <option value="csv">CSV</option>
+      <option value="json">JSON</option>
+      <option value="excel">Excel (XLSX)</option>
+    </select>
+  </div>
+
+  <input type="file" id="arquivo-importacao" accept=".csv,.json,.xlsx,.xls" class="form-control mb-3">
+  <button id="btnImportar" class="btn btn-primary mb-3">Importar</button>
+
+  <table id="preview-table" class="table table-bordered table-striped" style="display:none;">
+    <thead></thead>
+    <tbody></tbody>
+  </table>
+
+  <div id="mensagens"></div>
+  <div class="progress d-none" id="progress-bar">
+    <div class="progress-bar"></div>
+  </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
+<script src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
 
 <script type="module">
 document.addEventListener("DOMContentLoaded", () => {
@@ -95,7 +136,6 @@ document.addEventListener("DOMContentLoaded", () => {
   const fileInput = document.getElementById('arquivo-importacao');
   const previewTable = document.getElementById('preview-table');
   const mensagens = document.getElementById('mensagens');
-  const progressBar = document.getElementById('progress-bar');
   let dadosImportacao = null;
 
   fileInput.addEventListener('change', handleFileSelection);
@@ -108,21 +148,17 @@ document.addEventListener("DOMContentLoaded", () => {
     btnImportar.disabled = true;
     previewTable.style.display = 'none';
 
+    const reader = new FileReader();
+
     if (formato === 'csv' || formato === 'json') {
-      const reader = new FileReader();
       reader.onload = function(e) {
         const data = e.target.result;
-        try {
-          if (formato === 'csv') parseCSV(data);
-          if (formato === 'json') parseJSON(data);
-          btnImportar.disabled = false;
-        } catch (err) {
-          showMessage(err.message, 'danger');
-        }
+        if (formato === 'csv') parseCSV(data);
+        if (formato === 'json') parseJSON(data);
+        btnImportar.disabled = false;
       };
       reader.readAsText(file);
     } else if (formato === 'excel') {
-      const reader = new FileReader();
       reader.onload = function(e) {
         const data = new Uint8Array(e.target.result);
         const workbook = XLSX.read(data, { type: 'array' });
@@ -137,132 +173,102 @@ document.addEventListener("DOMContentLoaded", () => {
     }
   }
 
-  function exportToExcel(data) {
-    if (data.length === 0) return;
-
-    const orderedData = data.map(membro => ({
-      nome: membro.nome || '',
-      nascimento: membro.nascimento || '',
-      sexo: membro.sexo || '',
-      telefone: membro.telefone || '',
-      funcao: membro.funcao || '',
-      batismo: membro.batismo || '',
-      endereco: membro.endereco || '',
-      bairro: membro.bairro || '',
-      cidade: membro.cidade || '',
-      estado: membro.estado || '',
-      cep: membro.cep || '',
-      fotoURL: membro.fotoURL || ''
-    }));
-
-    const ws = XLSX.utils.json_to_sheet(orderedData);
-    const wb = XLSX.utils.book_new();
-    XLSX.utils.book_append_sheet(wb, ws, "Membros");
-    XLSX.writeFile(wb, `membros_${new Date().toISOString().slice(0,10)}.xlsx`);
+  function parseCSV(csv) {
+    const lines = csv.split('\n');
+    const headers = lines[0].split(',').map(h => h.trim());
+    const rows = [];
+    for (let i = 1; i < lines.length; i++) {
+      if (!lines[i].trim()) continue;
+      const values = lines[i].split(',');
+      const obj = {};
+      headers.forEach((h, j) => obj[h] = values[j] || '');
+      rows.push(obj);
+    }
+    dadosImportacao = rows;
+    showPreview(headers, rows);
   }
 
-  async function importCSVData(data, sobrescrever) {
-    const membrosRef = firebase.database().ref('membros');
-    if (sobrescrever) await membrosRef.set({});
-
-    const total = data.length;
-    let imported = 0;
-
-    for (const membro of data) {
-      if (!membro.fotoURL) membro.fotoURL = 'sem-foto.png';
-      const novoMembroRef = membrosRef.child(`${Date.now()}_${imported}`);
-      await novoMembroRef.set(membro);
-      imported++;
-    }
+  function parseJSON(json) {
+    const data = JSON.parse(json);
+    const rows = Array.isArray(data) ? data : Object.values(data.membros || {});
+    const headers = Object.keys(rows[0] || {});
+    dadosImportacao = rows;
+    showPreview(headers, rows);
   }
-
-  async function importJSONData(data, sobrescrever) {
-    if (data.membros) {
-      for (const [key, membro] of Object.entries(data.membros)) {
-        if (!membro.fotoURL) membro.fotoURL = 'sem-foto.png';
-      }
-    }
-
-    const dbRef = firebase.database().ref();
-    if (sobrescrever) {
-      await dbRef.set(data);
-    } else {
-      const updates = {};
-      for (const [key, value] of Object.entries(data.membros)) {
-        updates[`membros/${key}`] = value;
-      }
-      await dbRef.update(updates);
-    }
-  }
-
-  btnExportar.addEventListener('click', async () => {
-    btnExportar.disabled = true;
-    btnExportar.innerHTML = 'Exportando...';
-
-    const formato = document.getElementById('formato-exportacao').value;
-    const snapshot = await firebase.database().ref('membros').once('value');
-    if (!snapshot.exists()) {
-      showMessage('Nenhum dado', 'warning');
-      btnExportar.disabled = false;
-      btnExportar.innerHTML = 'Exportar';
-      return;
-    }
-
-    const data = Object.values(snapshot.val());
-
-    if (formato === 'excel') exportToExcel(data);
-
-    btnExportar.disabled = false;
-    btnExportar.innerHTML = 'Exportar';
-  });
-
-  btnImportar.addEventListener('click', async () => {
-    if (!dadosImportacao) return;
-
-    const formato = document.getElementById('formato-importacao').value;
-    const sobrescrever = document.getElementById('sobrescrever-dados')?.checked || false;
-
-    btnImportar.disabled = true;
-    btnImportar.innerHTML = 'Importando...';
-
-    if (formato === 'csv' || formato === 'excel') {
-      await importCSVData(dadosImportacao, sobrescrever);
-    } else if (formato === 'json') {
-      await importJSONData(dadosImportacao, sobrescrever);
-    }
-
-    btnImportar.disabled = false;
-    btnImportar.innerHTML = 'Importar';
-  });
 
   function showPreview(headers, rows) {
-    const thead = previewTable.querySelector('thead') || previewTable.createTHead();
-    const tbody = previewTable.querySelector('tbody') || previewTable.createTBody();
+    const thead = previewTable.querySelector('thead');
+    const tbody = previewTable.querySelector('tbody');
     thead.innerHTML = '';
     tbody.innerHTML = '';
     const headerRow = document.createElement('tr');
-    headers.forEach(h => { const th = document.createElement('th'); th.textContent = h; headerRow.appendChild(th); });
+    headers.forEach(h => {
+      const th = document.createElement('th');
+      th.textContent = h;
+      headerRow.appendChild(th);
+    });
     thead.appendChild(headerRow);
+
     rows.slice(0, 10).forEach(row => {
       const tr = document.createElement('tr');
-      headers.forEach(h => { const td = document.createElement('td'); td.textContent = row[h] || ''; tr.appendChild(td); });
+      headers.forEach(h => {
+        const td = document.createElement('td');
+        td.textContent = row[h] || '';
+        tr.appendChild(td);
+      });
       tbody.appendChild(tr);
     });
     previewTable.style.display = 'table';
   }
 
-  function showMessage(txt, type='info') {
-    mensagens.innerHTML = `<div class="alert alert-${type}">${txt}</div>`;
+  btnExportar.addEventListener('click', () => {
+    const formato = document.getElementById('formato-exportacao').value;
+
+    const data = [{
+      nome: 'João',
+      nascimento: '1990-01-01',
+      sexo: 'M',
+      telefone: '123456789',
+      funcao: 'Membro',
+      batismo: '2005',
+      endereco: 'Rua A',
+      bairro: 'Centro',
+      cidade: 'Cidade',
+      estado: 'SP',
+      cep: '00000-000',
+      fotoURL: ''
+    }];
+
+    if (formato === 'csv') {
+      const csv = Object.keys(data[0]).join(',') + '\n' + 
+                  data.map(r => Object.values(r).join(',')).join('\n');
+      const blob = new Blob([csv], { type: 'text/csv;charset=utf-8' });
+      saveAs(blob, 'membros.csv');
+    } else if (formato === 'json') {
+      const json = JSON.stringify(data, null, 2);
+      const blob = new Blob([json], { type: 'application/json' });
+      saveAs(blob, 'membros.json');
+    } else if (formato === 'excel') {
+      const ws = XLSX.utils.json_to_sheet(data);
+      const wb = XLSX.utils.book_new();
+      XLSX.utils.book_append_sheet(wb, ws, 'Membros');
+      XLSX.writeFile(wb, 'membros.xlsx');
+    }
+  });
+
+  btnImportar.addEventListener('click', () => {
+    if (!dadosImportacao) return;
+    showMessage(`Dados importados: ${dadosImportacao.length}`, 'success');
+  });
+
+  function showMessage(msg, type = 'info') {
+    mensagens.innerHTML = `<div class="alert alert-${type}">${msg}</div>`;
   }
 
 });
 </script>
 
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- Logoff após inatividade -->
-<script type="module" src="js/session-timeout.js"></script>
 
 </body>
 </html>
