--- a/exportar.html
+++ b/exportar.html
@@ -3,26 +3,21 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Administração de Dados</title>
+<title>Administração - Membros</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+<script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
 <style>
 body { padding-top: 70px; }
 .navbar {
-  background-color: #4CAF50; /* verde */
+  background-color: #4CAF50;
 }
-
-.navbar .nav-link,
-.navbar .navbar-brand {
+.navbar .nav-link, .navbar .navbar-brand {
   color: #fff;
 }
-
-.navbar .nav-link:hover,
-.navbar .navbar-brand:hover {
+.navbar .nav-link:hover, .navbar .navbar-brand:hover {
   color: #ddd;
 }
-
-/* Estilos para mensagem de não autorizado */
 #nao-autorizado {
   margin-top: 100px;
   max-width: 600px;
@@ -30,54 +25,17 @@ body { padding-top: 70px; }
   margin-right: auto;
   display: none;
 }
-
-/* Oculta conteúdo restrito por padrão */
 .conteudo-restrito {
   display: none;
 }
-
 body.autorizado .conteudo-restrito {
   display: block;
-}
-
-/* Estilos para área de importação */
-#import-area {
-  border: 2px dashed #ccc;
-  padding: 20px;
-  text-align: center;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-#import-area:hover {
-  border-color: #4CAF50;
-  background-color: #f8f9fa;
-}
-
-#preview-table {
-  margin-top: 20px;
-  display: none;
-}
-
-.progress {
-  height: 25px;
-  margin-top: 10px;
-}
-
-.progress-bar {
-  line-height: 25px;
 }
 </style>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-  <div class="container">
-    <a class="navbar-brand" href="#">Administração de Dados</a>
-  </div>
-</nav>
-
+<!-- Mensagem de não autorizado -->
 <div id="nao-autorizado">
   <div class="alert alert-danger text-center">
     <h4><i class="fas fa-exclamation-triangle me-2"></i>Acesso Restrito</h4>
@@ -88,187 +46,167 @@ body.autorizado .conteudo-restrito {
   </div>
 </div>
 
-<div class="container conteudo-restrito mt-4">
-  <h1>Administração de Dados</h1>
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top conteudo-restrito">
+  <div class="container">
+      <a class="navbar-brand" href="#">
+        <i class="fas fa-cogs me-2"></i>Administração de Membros
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">
+              <i class="fas fa-home me-1"></i> Home
+            </a>
+          </li>
+        </ul>
+      </div>
+  </div>
+</nav>
 
+<div class="container conteudo-restrito">
+  <h2 class="mt-4">Exportar / Importar Membros</h2>
   <div class="mb-3">
-    <label for="formato-exportacao" class="form-label">Formato de exportação:</label>
-    <select id="formato-exportacao" class="form-select">
-      <option value="csv">CSV</option>
-      <option value="json">JSON</option>
-      <option value="excel">Excel (XLSX)</option>
-    </select>
+    <button id="btnExportarExcel" class="btn btn-success">
+      <i class="fas fa-file-excel me-1"></i> Exportar para Excel
+    </button>
+    <input type="file" id="inputImportarExcel" accept=".xlsx" class="form-control mt-2">
   </div>
-
-  <button id="btnExportar" class="btn btn-success mb-3">Exportar</button>
-
-  <div class="mb-3">
-    <label for="formato-importacao" class="form-label">Formato de importação:</label>
-    <select id="formato-importacao" class="form-select">
-      <option value="csv">CSV</option>
-      <option value="json">JSON</option>
-      <option value="excel">Excel (XLSX)</option>
-    </select>
-  </div>
-
-  <input type="file" id="arquivo-importacao" accept=".csv,.json,.xlsx,.xls" class="form-control mb-3">
-  <button id="btnImportar" class="btn btn-primary mb-3">Importar</button>
-
-  <table id="preview-table" class="table table-bordered table-striped" style="display:none;">
-    <thead></thead>
-    <tbody></tbody>
-  </table>
-
-  <div id="mensagens"></div>
-  <div class="progress d-none" id="progress-bar">
-    <div class="progress-bar"></div>
-  </div>
+  <div id="mensagem" class="mt-3"></div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
-<script src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
-
 <script type="module">
-document.addEventListener("DOMContentLoaded", () => {
+import { auth, db } from './firebase-config.js';
+import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+import { ref, get, set } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
 
-  const btnExportar = document.getElementById('btnExportar');
-  const btnImportar = document.getElementById('btnImportar');
-  const fileInput = document.getElementById('arquivo-importacao');
-  const previewTable = document.getElementById('preview-table');
-  const mensagens = document.getElementById('mensagens');
-  let dadosImportacao = null;
-
-  fileInput.addEventListener('change', handleFileSelection);
-
-  function handleFileSelection() {
-    const file = fileInput.files[0];
-    if (!file) return;
-
-    const formato = document.getElementById('formato-importacao').value;
-    btnImportar.disabled = true;
-    previewTable.style.display = 'none';
-
-    const reader = new FileReader();
-
-    if (formato === 'csv' || formato === 'json') {
-      reader.onload = function(e) {
-        const data = e.target.result;
-        if (formato === 'csv') parseCSV(data);
-        if (formato === 'json') parseJSON(data);
-        btnImportar.disabled = false;
-      };
-      reader.readAsText(file);
-    } else if (formato === 'excel') {
-      reader.onload = function(e) {
-        const data = new Uint8Array(e.target.result);
-        const workbook = XLSX.read(data, { type: 'array' });
-        const sheet = workbook.Sheets[workbook.SheetNames[0]];
-        const json = XLSX.utils.sheet_to_json(sheet);
-        dadosImportacao = json;
-        const headers = Object.keys(json[0]);
-        showPreview(headers, json);
-        btnImportar.disabled = false;
-      };
-      reader.readAsArrayBuffer(file);
+async function checkAdmin(user) {
+  try {
+    if (!user) return false;
+    const userRef = ref(db, `users/${user.uid}`);
+    const snapshot = await get(userRef);
+    if (snapshot.exists()) {
+      const userData = snapshot.val();
+      return userData.isAdmin === true;
     }
+    return false;
+  } catch {
+    return false;
   }
+}
 
-  function parseCSV(csv) {
-    const lines = csv.split('\n');
-    const headers = lines[0].split(',').map(h => h.trim());
-    const rows = [];
-    for (let i = 1; i < lines.length; i++) {
-      if (!lines[i].trim()) continue;
-      const values = lines[i].split(',');
-      const obj = {};
-      headers.forEach((h, j) => obj[h] = values[j] || '');
-      rows.push(obj);
-    }
-    dadosImportacao = rows;
-    showPreview(headers, rows);
+function toggleContent(isAdmin) {
+  const authMsg = document.getElementById('nao-autorizado');
+  const content = document.querySelectorAll('.conteudo-restrito');
+  if (isAdmin) {
+    authMsg.style.display = 'none';
+    content.forEach(el => el.style.display = 'block');
+    document.body.classList.add('autorizado');
+  } else {
+    authMsg.style.display = 'block';
+    content.forEach(el => el.style.display = 'none');
+    document.body.classList.remove('autorizado');
   }
+}
 
-  function parseJSON(json) {
-    const data = JSON.parse(json);
-    const rows = Array.isArray(data) ? data : Object.values(data.membros || {});
-    const headers = Object.keys(rows[0] || {});
-    dadosImportacao = rows;
-    showPreview(headers, rows);
-  }
-
-  function showPreview(headers, rows) {
-    const thead = previewTable.querySelector('thead');
-    const tbody = previewTable.querySelector('tbody');
-    thead.innerHTML = '';
-    tbody.innerHTML = '';
-    const headerRow = document.createElement('tr');
-    headers.forEach(h => {
-      const th = document.createElement('th');
-      th.textContent = h;
-      headerRow.appendChild(th);
-    });
-    thead.appendChild(headerRow);
-
-    rows.slice(0, 10).forEach(row => {
-      const tr = document.createElement('tr');
-      headers.forEach(h => {
-        const td = document.createElement('td');
-        td.textContent = row[h] || '';
-        tr.appendChild(td);
-      });
-      tbody.appendChild(tr);
-    });
-    previewTable.style.display = 'table';
-  }
-
-  btnExportar.addEventListener('click', () => {
-    const formato = document.getElementById('formato-exportacao').value;
-
-    const data = [{
-      nome: 'João',
-      nascimento: '1990-01-01',
-      sexo: 'M',
-      telefone: '123456789',
-      funcao: 'Membro',
-      batismo: '2005',
-      endereco: 'Rua A',
-      bairro: 'Centro',
-      cidade: 'Cidade',
-      estado: 'SP',
-      cep: '00000-000',
-      fotoURL: ''
-    }];
-
-    if (formato === 'csv') {
-      const csv = Object.keys(data[0]).join(',') + '\n' + 
-                  data.map(r => Object.values(r).join(',')).join('\n');
-      const blob = new Blob([csv], { type: 'text/csv;charset=utf-8' });
-      saveAs(blob, 'membros.csv');
-    } else if (formato === 'json') {
-      const json = JSON.stringify(data, null, 2);
-      const blob = new Blob([json], { type: 'application/json' });
-      saveAs(blob, 'membros.json');
-    } else if (formato === 'excel') {
-      const ws = XLSX.utils.json_to_sheet(data);
-      const wb = XLSX.utils.book_new();
-      XLSX.utils.book_append_sheet(wb, ws, 'Membros');
-      XLSX.writeFile(wb, 'membros.xlsx');
-    }
+document.addEventListener('DOMContentLoaded', () => {
+  onAuthStateChanged(auth, async (user) => {
+    const isAdmin = await checkAdmin(user);
+    toggleContent(isAdmin);
   });
-
-  btnImportar.addEventListener('click', () => {
-    if (!dadosImportacao) return;
-    showMessage(`Dados importados: ${dadosImportacao.length}`, 'success');
-  });
-
-  function showMessage(msg, type = 'info') {
-    mensagens.innerHTML = `<div class="alert alert-${type}">${msg}</div>`;
-  }
-
 });
+
+// EXPORTAR
+document.getElementById("btnExportarExcel").addEventListener("click", async () => {
+  const membrosRef = ref(db, "membros");
+  const snapshot = await get(membrosRef);
+  if (!snapshot.exists()) {
+    alert("Nenhum membro encontrado.");
+    return;
+  }
+
+  const data = Object.values(snapshot.val()).map(m => ({
+    nome: m.nome || "",
+    nascimento: m.nascimento || "",
+    sexo: m.sexo || "",
+    telefone: m.telefone || "",
+    funcao: m.funcao || "",
+    batismo: m.batismo || "",
+    endereco: m.endereco || "",
+    bairro: m.bairro || "",
+    cidade: m.cidade || "",
+    estado: m.estado || "",
+    cep: m.cep || "",
+    fotoURL: m.fotoURL || ""
+  }));
+
+  const ws = XLSX.utils.json_to_sheet(data, {
+    header: [
+      "nome", "nascimento", "sexo", "telefone", "funcao", "batismo",
+      "endereco", "bairro", "cidade", "estado", "cep", "fotoURL"
+    ]
+  });
+  const wb = XLSX.utils.book_new();
+  XLSX.utils.book_append_sheet(wb, ws, "Membros");
+  XLSX.writeFile(wb, "membros.xlsx");
+  mostrarMensagem("✅ Exportação concluída!");
+});
+
+// IMPORTAR
+document.getElementById("inputImportarExcel").addEventListener("change", async (e) => {
+  const file = e.target.files[0];
+  if (!file) return;
+
+  const reader = new FileReader();
+  reader.onload = async (evt) => {
+    const data = evt.target.result;
+    const workbook = XLSX.read(data, { type: "binary" });
+    const wsname = workbook.SheetNames[0];
+    const ws = workbook.Sheets[wsname];
+    const json = XLSX.utils.sheet_to_json(ws);
+
+    let count = 0;
+
+    for (const [index, m] of json.entries()) {
+      const novoMembro = {
+        nome: m.nome || "",
+        nascimento: m.nascimento || "",
+        sexo: m.sexo || "",
+        telefone: m.telefone || "",
+        funcao: m.funcao || "",
+        batismo: m.batismo || "",
+        endereco: m.endereco || "",
+        bairro: m.bairro || "",
+        cidade: m.cidade || "",
+        estado: m.estado || "",
+        cep: m.cep || "",
+        fotoURL: m.fotoURL?.trim() ? m.fotoURL : "sem-foto.png"
+      };
+
+      const id = `import-${Date.now()}-${index}`;
+      await set(ref(db, `membros/${id}`), novoMembro);
+      count++;
+    }
+
+    mostrarMensagem(`✅ Importação concluída! ${count} registros salvos.`);
+    e.target.value = "";
+  };
+
+  reader.readAsBinaryString(file);
+});
+
+function mostrarMensagem(msg) {
+  document.getElementById("mensagem").innerHTML = `
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+      ${msg}
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  `;
+}
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 </html>
