--- a/exportar.html
+++ b/exportar.html
@@ -35,7 +35,6 @@ body.autorizado .conteudo-restrito {
 </head>
 <body>
 
-<!-- Mensagem de não autorizado -->
 <div id="nao-autorizado">
   <div class="alert alert-danger text-center">
     <h4><i class="fas fa-exclamation-triangle me-2"></i>Acesso Restrito</h4>
@@ -125,6 +124,16 @@ function formatDateDMY(dateString) {
   return `${parts[2]}/${parts[1]}/${parts[0]}`;
 }
 
+function excelDateToYMD(serial) {
+  const utc_days = Math.floor(serial - 25569);
+  const utc_value = utc_days * 86400;
+  const date_info = new Date(utc_value * 1000);
+  const year = date_info.getUTCFullYear();
+  const month = String(date_info.getUTCMonth() + 1).padStart(2, '0');
+  const day = String(date_info.getUTCDate()).padStart(2, '0');
+  return `${year}-${month}-${day}`;
+}
+
 // EXPORTAR
 document.getElementById("btnExportarExcel").addEventListener("click", async () => {
   const membrosRef = ref(db, "membros");
@@ -161,7 +170,7 @@ document.getElementById("btnExportarExcel").addEventListener("click", async () =
   mostrarMensagem("✅ Exportação concluída!");
 });
 
-// IMPORTAR com substituição total (mantendo datas no formato aaaa-mm-dd)
+// IMPORTAR com conversão de datas e substituição total
 document.getElementById("inputImportarExcel").addEventListener("change", async (e) => {
   const file = e.target.files[0];
   if (!file) return;
@@ -176,7 +185,6 @@ document.getElementById("inputImportarExcel").addEventListener("change", async (
 
     const membrosRef = ref(db, "membros");
 
-    // Apaga todos os membros antes de importar
     await set(membrosRef, null);
 
     let count = 0;
@@ -184,11 +192,15 @@ document.getElementById("inputImportarExcel").addEventListener("change", async (
     for (const [index, m] of json.entries()) {
       const novoMembro = {
         nome: m.nome || "",
-        nascimento: m.nascimento || "", // Importa sem alteração (espera aaaa-mm-dd)
+        nascimento: (typeof m.nascimento === 'number')
+                      ? excelDateToYMD(m.nascimento)
+                      : m.nascimento || "",
         sexo: m.sexo || "",
         telefone: m.telefone || "",
         funcao: m.funcao || "",
-        batismo: m.batismo || "",       // Importa sem alteração (espera aaaa-mm-dd)
+        batismo: (typeof m.batismo === 'number')
+                      ? excelDateToYMD(m.batismo)
+                      : m.batismo || "",
         endereco: m.endereco || "",
         bairro: m.bairro || "",
         cidade: m.cidade || "",
