--- a/cadastro-membros.html
+++ b/cadastro-membros.html
@@ -78,7 +78,7 @@
         <div>
           <label for="endereco" class="form-label required-field">Endereço</label>
           <div class="relative">
-            <input type="text" id="endereco" name="endereco" class="form-control" required placeholder="Digite o endereço completo">
+            <input type="text" id="endereco" name="endereco" class="form-control" placeholder="Digite o endereço completo">
             <i class="fas fa-map-marker-alt input-icon"></i>
           </div>
         </div>
@@ -87,7 +87,7 @@
         <div>
           <label for="bairro" class="form-label required-field">Bairro</label>
             <div class="relative">
-              <input type="text" id="bairro" name="bairro" class="form-control" required placeholder="Digite o Bairro">
+              <input type="text" id="bairro" name="bairro" class="form-control" placeholder="Digite o Bairro">
               <i class="fas fa-map-marker-alt input-icon"></i>
             </div>
           </div>
@@ -96,7 +96,7 @@
           <div>
             <label for="cidade" class="form-label required-field">Cidade</label>
             <div class="relative">
-              <input type="text" id="cidade" name="cidade" class="form-control" required placeholder="Digite a Cidade">
+              <input type="text" id="cidade" name="cidade" class="form-control" placeholder="Digite a Cidade">
               <i class="fas fa-map-marker-alt input-icon"></i>
             </div>
           </div>
@@ -105,7 +105,7 @@
           <div>
             <label for="estado" class="form-label required-field">Estado</label>
             <div class="relative">
-              <input type="text" id="estado" name="estado" class="form-control" required placeholder="Digite o Estado">
+              <input type="text" id="estado" name="estado" class="form-control" placeholder="Digite o Estado">
               <i class="fas fa-map-marker-alt input-icon"></i>
             </div>
           </div>
@@ -121,9 +121,9 @@
 
         <!-- Campo data nascimento -->
         <div>
-          <label for="nascimento" class="form-label required-field">Data de Nascimento</label>
+          <label for="nascimento" class="form-label">Data de Nascimento</label>
           <div class="relative">
-            <input type="date" id="nascimento" name="nascimento" class="form-control" required>
+            <input type="date" id="nascimento" name="nascimento" class="form-control">
             <i class="fas fa-birthday-cake input-icon"></i>
           </div>
         </div>
@@ -146,9 +146,9 @@
 
         <!-- Campo Telefone -->
         <div>
-          <label for="telefone" class="form-label required-field">Telefone</label>
+          <label for="telefone" class="form-label">Telefone</label>
           <div class="relative">
-            <input type="text" id="telefone" name="telefone" class="form-control" required 
+            <input type="text" id="telefone" name="telefone" class="form-control" 
                    placeholder="(00) 00000-0000" maxlength="15">
             <i class="fas fa-phone input-icon"></i>
           </div>
